fixxed warning message visibility

--- a/med-website/src/app/page-location/page-location.component.scss
+++ b/med-website/src/app/page-location/page-location.component.scss
@@ -8,6 +8,11 @@
     color: $primary-color;
 }
 
+button {
+  border: 0;
+  padding: 0;
+}
+
 .back-link:hover {
     cursor: pointer;
 }
@@ -23,10 +28,10 @@
     justify-content: flex-end;
 }
 .container {
-    display: flex;
+    display: flex;  
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     max-width: 80%;
 
 }
@@ -40,13 +45,12 @@ mat-card {
     margin-bottom: 2rem;
 }
 
-#myImg {
-    border-radius: 5px;
+#testImage {
     cursor: pointer;
     transition: 0.3s;
   }
   
-  #myImg:hover {opacity: 0.7;}
+  #testImage:hover {opacity: 0.7;}
   
   .modal {
     display: none;
@@ -58,7 +62,7 @@ mat-card {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
+    // background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.9);
   }
 
@@ -68,6 +72,17 @@ mat-card {
     display: block;
     width: 80%;
     max-width: 700px;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+
+  .modal-content-two {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    animation-name: zoom;
+    animation-duration: 0.6s;
   }
   
   #caption {
@@ -79,11 +94,6 @@ mat-card {
     color: #ccc;
     padding: 10px 0;
     height: 150px;
-  }
-  
-  .modal-content, #caption {
-    animation-name: zoom;
-    animation-duration: 0.6s;
   }
   
   @keyframes zoom {
